# AMR

./: .gitignore  CMakeLists.txt  Makefile  README.md  amrh.h  legion_cmake_script.sh  main.cpp  pyproject.toml  regent_install.sh  run.sh  submit.slurm
demolibs/: CMakeLists.txt  demolibs.h  hdf5_hook.cpp  hdf5_hook.h  legion_hook.h  num_kernels.h  physical_models.cpp  physical_models.h  tasks.cpp  tasks.h  util.cpp  util.h
numerics/: CMakeLists.txt
post/: visImplosionMeshSolution.py  visVortexMeshSolution.py  vis_base_field_movie.py  visualize_base_field.py  visualize_mesh.py
scripts/: install_regent_legion.sh  reproduce_cuda_demand_perf.sh  reproduce_task_fusion_perf.sh
src/: compile_demo.sh  compile_main.sh  compile_pde_local_upsample.sh  compile_profile.txt  compile_riemann_gpu0.sh  compile_riemann_input0.sh  compile_riemann_local_upsample.sh  compile_riemann_noinline.sh  compile_test_all.sh  compile_test_pde.sh  demo.rg  eos.rg  fields.rg  grid.rg  input.rg  input_riemann.rg  input_riemann_GPUbig.rg  input_vortex.rg  main.rg  navier_stokes.rg  navier_stokes_local_upsample.rg  numerics.rg  problem_config.rg  problem_config_riemann.rg  riemann_local_upsample.rg  riemann_local_upsample_gpu0.rg  riemann_local_upsample_noinline.rg  test_all.rg  test_pde.rg  test_pde_local_upsample.rg  test_riemann_local_upsample.rg  test_riemann_local_upsample_gpu0.rg  test_riemann_local_upsample_noinline.rg  transport.rg
tests/: HelloWorld.rg  Implosion.py  Implosion2.py  PeriodicShear.py  VortexAdv.py  compile_HelloWorld.sh  submit_regent.sh  vizShear.py
tests/build_HelloWorld/: HelloWorld
util/: CMakeLists.txt  legion_hook.h  util.cpp  util.h
